apps/sporecast-canary/templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sporecast-frontend
spec:
  selector:
    app: sporecast-frontend
  ports:
    - port: 80
      targetPort: 80
